js262/test/language/module-code/parse-err-decl-pos-export-for-of-var.js


/*---
description: Statement cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

for (var y of [])
  export default null;
